--- a/exercise1.html
+++ b/exercise1.html
@@ -5,13 +5,35 @@
 <title>Personal Page</title>
 
 </head>
+<body>
+    <h1> My Personal Page</h1>
+    <img src="profile.png" width="100px" height="100px">
+    <br>
+    <br>
+    <a href="https://www.ucalgary.ca/">University of Calgary</a>
+    <br>
+    <a href="exercise2.html">History</a>
+
+    <h2>My Hobbies</h2>
+    <ul>
+        <li>Gaming</li>
+        <li>Watching Anime</li>
+        <li>Reading</li>
+    </ul>
+
+    <form>
+        <label for="01">Enter your name:</label>
+        <input type="text" id="01">
+        <br>
+        
+        <input type="radio" id="L01" name="sec" value="L01">
+        <label for="L01">Section 1</label>
+        <br>
+        
+        <input type="radio" id="L02" name="sec" value="L02">
+        <label for="L02">Section 2</label>
+    </form>
 
 
-
-
-
-
-
-
-
+</body>
 </html>
