--- a/exercise2.html
+++ b/exercise2.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-    <table style="width: 100%;">
+    <table border="0" style="width: 100%;">
         <tr>
-            <td>
+            <td colspan="2">
                 <img src="banner.jpg" alt="University of Calgary banner" width="100%" height="600px"/>
             </td>
         </tr>
         <tr>
-            <td>
+            <td colspan="2">
                 <h1>
                     Like many Calgary success stories, ours has a spirited beginning, an unprecedented growth spurt and a promising future.
                 </h1>
@@ -37,30 +37,53 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td colspan="2">
                 <hr>
             </td>
         </tr>
         <tr>
-            <td>
-                <h1>
-                    The roads that brought us here
-                </h1>
+            <td colspan="2">
+                <h1>The roads that brought us here</h1>
                 <p>
                     What are our defining moments? They wind through 50 years and countless memories, each one stamping a mark on the cultural and physical landscape of our city. We’re looking back but we’re pushing forward.
                 </p>
             </td>
-
         </tr>
         <tr>
-            <th>
-
-            </th>
+            <td>
+                <img src="image1.jpg" witdh="570px" height="400px">
+            </td>
+            <td>
+                <h2>Calgary's Urban Evolution</h2>
+                <p>
+                    A university and a city growing together side by side.
+                </p>
+                <a href="https://ucalgary.ca/about/our-history/calgarys-urban-evolution">Read more</a>
+            </td>
         </tr>
         <tr>
-            <th>
-
-            </th>
+            <td>
+                <h2>Changing Face of Campus</h2>
+                <p>
+                    Creating an intellectual hub to empower the problem-solvers of the future, today.
+                </p>
+                <a href="https://ucalgary.ca/about/our-history/changing-face-campus">Read more</a>
+            </td>
+            <td>
+                <img src="image2.jpg" width="570px" height="400px">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="image3.jpg" width="570px" height="400px">
+            </td>
+            <td>
+                <h2>Culture and Society</h2>
+                <p>
+                    Fueling the cultural and social transformation of a city and region.
+                </p>
+                <a href="https://ucalgary.ca/about/our-history/culture-and-society">Read more</a>
+            </td>
         </tr>
     </table>
 
